# tiralabra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  maarittely.md  raportti1.md
.github/workflows/: codecov.yml
docs/: kayttoohje.md  maarittely.md  raportti2.md  raportti3.md  raportti4-5.md  testaus.md  toteutus.md
src/: CMakeLists.txt  hopcroft.cpp  hopcroft.h  koodi  main.cpp  matcher.cpp  matcher.h  powerset.cpp  powerset.h  preprocess.cpp  preprocess.h  thompson.cpp  thompson.h
src/ds/: deque.h  hopcroft_block.h  hopcroft_state.h  list.h  matcher.h  node.h  node_dfa.h  node_nfa.h  pair.h  queue.h  stack.h  sub_expr.h  vector.h
test/: CMakeLists.txt  deque.cpp  hopcroft_min.cpp  list.cpp  main.cpp  pair.cpp  pre_all.cpp  queue.cpp  stack.cpp  test.cpp  vector.cpp
test/data/: 10_1  test1  test10  test2  test3  test4  test5  test6  test7  test8  test9
test_perf/: CMakeLists.txt  ioutils.h  main.cpp  test.cpp
